<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">Browser</string>
    <string name="choose_upload">Choose file for upload</string>
    <string name="uploads_disabled">File uploads are disabled.</string>
    <string name="new_tab">New tab</string>
    <string name="new_incognito_tab">New incognito tab</string>
    <string name="tab_bookmarks">Bookmarks</string>
    <string name="tab_most_visited">Most visited</string>
    <string name="tab_history">History</string>
    <string name="tab_snapshots">Saved pages</string>
    <string name="added_to_bookmarks">Added to bookmarks.</string>
    <string name="removed_from_bookmarks">Removed from bookmarks.</string>
    <string name="sign_in_to">Sign in to <xliff:g id="hostname">%s1</xliff:g> \"<xliff:g id="realm">%s2</xliff:g>\"</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="action">Sign in</string>
    <string name="bookmarks_search">Browser</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_bar_loading">Loading\u2026</string>
    <string name="page_info">Page info</string>
    <string name="page_info_view">View page info</string>
    <string name="page_info_address">Address:</string>
    <string name="ssl_warnings_header">There are problems with the security certificate for this site.</string>
    <string name="ssl_continue">Continue</string>
    <string name="security_warning">Security warning</string>
    <string name="view_certificate">View certificate</string>
    <string name="ssl_go_back">Go back</string>
    <string name="ssl_untrusted">This certificate isn\'t from a trusted authority.</string>
    <string name="ssl_mismatch">The name of the site doesn\'t match the name on the certificate.</string>
    <string name="ssl_expired">This certificate has expired.</string>
    <string name="ssl_not_yet_valid">This certificate isn\'t valid yet.</string>
    <string name="ssl_date_invalid">This certificate has an invalid date.</string>
    <string name="ssl_invalid">This certificate is invalid.</string>
    <string name="ssl_unknown">Unknown certificate error.</string>
    <string name="stopping">Stopping\u2026</string>
    <string name="stop">Stop</string>
    <string name="exit">Exit</string>
    <string name="reload">Refresh</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="save">OK</string>
    <string name="do_not_save">Cancel</string>
    <string name="location">Address</string>
    <string name="account">Account</string>
    <string name="containing_folder">Add to</string>
    <string name="new_folder">New folder</string>
    <string name="edit_folder">Edit folder</string>
    <string name="delete_folder">Delete folder</string>
    <string name="no_subfolders">No subfolders.</string>
    <string name="add_to_bookmarks_menu_option">Bookmarks</string>
    <string name="add_to_homescreen_menu_option">Home screen</string>
    <string name="add_to_other_folder_menu_option">Other folder</string>
    <string name="name">Label</string>
    <string name="http">http://</string>
    <string name="save_to_bookmarks">Add bookmark</string>
    <string name="bookmark_this_page">Bookmark this page</string>
    <string name="remove">Remove</string>
    <string name="edit_bookmark">Edit bookmark</string>
    <string name="create_shortcut_bookmark">Add shortcut to home</string>
    <string name="open_bookmark">Open</string>
    <string name="remove_bookmark">Delete bookmark</string>
    <string name="remove_from_bookmarks">Remove from bookmarks</string>
    <string name="remove_history_item">Remove from history</string>
    <string name="set_as_homepage">Set as homepage</string>
    <string name="bookmark_saved">Saved to bookmarks.</string>
    <string name="bookmark_not_saved">Couldn\'t save bookmark.</string>
    <string name="homepage_set">Homepage set.</string>
    <string name="bookmark_needs_title">"Bookmark must have a name."</string>
    <string name="bookmark_needs_url">"Bookmark must have a location."</string>
    <string name="bookmark_url_not_valid">This URL isn\'t valid.</string>
    <string name="bookmark_cannot_save_url">This URL can\'t be bookmarked.</string>
    <string name="bookmark_page">Bookmark last-viewed page</string>
    <string name="bookmark_thumbnail_view">Thumbnails</string>
    <string name="bookmark_list_view">List</string>
    <string name="current_page">from\u0020</string>
    <string name="delete_bookmark_warning">Delete bookmark \"<xliff:g id="bookmark">%s</xliff:g>\"?</string>
    <string name="open_all_in_new_window">Open all in new tabs</string>
    <string name="goto_dot">Go</string>
    <string name="select_dot">Select text</string>
    <string-array name="bookmarks" translatable="false">
        <item>移动应用商场</item>
        <item>http://a.10086.cn</item>
        <item>移动梦网</item>
        <item>http://wap.monternet.com</item>
        <item>手机阅读</item>
        <item>http://wap.cmread.com</item>
        <item>手机游戏</item>
        <item>http://g.10086.cn</item>
        <item>手机视频</item>
        <item>http://wap.cmvideo.cn</item>
        <item>无线音乐</item>
        <item>http://m.10086.cn</item>
        <item>12580</item>
        <item>http://12580wap.10086.cn/?pid=PCM002942000</item>
        <item>10086门户</item>
        <item>http://10086.cn/m</item>
    </string-array>
    <string name="shortcut_bookmark">Bookmark</string>
    <string name="shortcut_bookmark_title">Choose a bookmark</string>
    <string name="history">History</string>
    <string name="menu_view_download">Downloads</string>
    <string name="copy_page_url">Copy page URL</string>
    <string name="share_page">Share page</string>
    <string name="menu_save_snapshot">Save for offline reading</string>
    <string name="snapshot_failed">Couldn\'t save for offline reading.</string>
    <string name="contextheader_folder_bookmarkcount"><xliff:g id="bookmark_count">%d</xliff:g> bookmarks</string>
    <string name="contextheader_folder_empty">Empty folder</string>
    <string name="contextmenu_openlink">Open</string>
    <string name="contextmenu_openlink_newwindow">Open in new tab</string>
    <string name="contextmenu_openlink_newwindow_background">Open in new background tab</string>
    <string name="contextmenu_savelink">Save link</string>
    <string name="contextmenu_sharelink">Share link</string>
    <string name="contextmenu_copy">Copy</string>
    <string name="contextmenu_copylink">Copy link URL</string>
    <string name="contextmenu_download_image">Save image</string>
    <string name="contextmenu_view_image">View image</string>
    <string name="contextmenu_set_wallpaper">Set as wallpaper</string>
    <string name="contextmenu_dial_dot">Dial\u2026</string>
    <string name="contextmenu_add_contact">Add contact</string>
    <string name="contextmenu_send_mail">Send email</string>
    <string name="contextmenu_map">Map</string>
    <string name="choosertitle_sharevia">Share via</string>
    <string name="clear">Clear</string>
    <string name="replace">Replace</string>
    <string name="browser_bookmarks_page_bookmarks_text">Bookmarks</string>
    <string name="menu_preferences">Settings</string>
    <string name="pref_content_title">Page content</string>
    <string name="pref_content_load_images">Load images</string>
    <string name="pref_content_load_images_summary">Display images on web pages</string>
    <string name="pref_content_block_popups">Block pop-ups</string>
    <string name="pref_content_javascript">Enable JavaScript</string>
    <string name="pref_content_open_in_background">Open in background</string>
    <string name="pref_content_plugins">Enable plug-ins</string>
    <string-array name="pref_content_plugins_choices">
        <item>Always on</item>
        <item>On demand</item>
        <item>Off</item>
    </string-array>
    <string-array name="pref_content_plugins_values" translatable="false">
        <item>ON</item>
        <item>ON_DEMAND</item>
        <item>OFF</item>
    </string-array>
    <string name="pref_content_open_in_background_summary">Open new tabs behind the current tab</string>
    <string name="pref_content_homepage">Set homepage</string>
    <string name="pref_content_search_engine">Set search engine</string>
    <string name="pref_content_search_engine_summary">Choose a search engine</string>
    <string name="pref_set_homepage_to">Set to</string>
    <string-array name="pref_homepage_choices">
        
        <item>Current page</item>
        
        <item>Blank page</item>
        
        <item>Default page</item>
        
        <item>Most visited sites</item>
        
        <item>Other</item>
    </string-array>
    <string-array name="pref_homepage_values" translatable="false">
        <item>current</item>
        <item>blank</item>
        <item>default</item>
        <item>most_visited</item>
        <item>other</item>
    </string-array>
    <string name="pref_content_autofit">Auto-fit pages</string>
    <string name="pref_content_autofit_summary">Format webpages to fit the screen</string>
    <string name="pref_general_title">General</string>
    <string name="pref_general_sync_title">Sync</string>
    <string name="pref_general_autofill_title">Auto-fill</string>
    <string name="pref_autofill_enabled">Form auto-fill</string>
    <string name="pref_autofill_enabled_summary">Fill out web forms with a single touch</string>
    <string name="pref_autofill_profile_editor">Auto-fill text</string>
    <string name="pref_autofill_profile_editor_summary">Set up text to auto-fill in web forms</string>
    <string name="pref_autologin_title">Automatic Google signin</string>
    <string name="pref_autologin_progress">Signing into Google sites using <xliff:g>%s</xliff:g></string>
    <string name="autologin_bar_text">Sign in as</string>
    <string name="autologin_bar_login_text">Sign in</string>
    <string name="autologin_bar_hide_text">Hide</string>
    <string name="autologin_bar_error">Couldn\'t sign in.</string>
    <string name="autofill_profile_editor_heading">Type the text you want to auto-fill in web forms.</string>
    <string name="autofill_profile_editor_name">Full name:</string>
    <string name="autofill_profile_editor_email_address">Email:</string>
    <string name="autofill_profile_editor_company_name">Company name:</string>
    <string name="autofill_profile_editor_address_line_1">Address line 1:</string>
    <string name="autofill_profile_editor_address_line_1_hint">Street address, P.O. box, c/o</string>
    <string name="rotary_system">System</string>
    <string name="rotary_vertical">Vertical</string>
    <string name="rotary_horizontal">Horizontal</string>
    <string name="enable_sd_card">SD card is not available, please connect one</string>
    <string name="no_file">No files</string>
    <string name="operation_cancel">Cancel</string>
    <string name="operation_copy">Copy</string>
    <string name="operation_delete">Delete</string>
    <string name="operation_move">Move</string>
    <string name="operation_paste">Paste</string>
    <string name="operation_selectall">Select All</string>
    <string name="str_settings_show_hidefile">Show Hidden Files</string>
    <string name="str_only_show_name">Only Show FileName</string>
    <string name="summary_on_onlyshowname">Only Show FileName</string>
    <string name="summary_off_onlyshowname">Show Detailed Information</string>
    <string name="str_display_settings">Display Settings</string>
    <string name="str_sort_settings">Sort Settings</string>
    <string name="str_sort_desc">Descending Sort</string>
    <string name="summary_on_sortdesc">Descending Sort</string>
    <string name="summary_off_sortdesc">Ascending Sort</string>
    <string name="summary_on_show_hidefile">Show Hidden Files</string>
    <string name="summary_off_show_hidefile">Hide Hidden Files</string>
</resources>