<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RadioGroup 
     	android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:id="@+id/rotary_radioGroup">
        <RadioButton android:id="@+id/radio_system"
        	android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		android:textSize="15sp"
        	android:text="@string/rotary_system"
        	/>
        <RadioButton android:id="@+id/radio_vertical"
        	android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
        	android:text="@string/rotary_vertical"
        	android:textSize="15sp"
        	/>
        <RadioButton android:id="@+id/radio_horizontal"
        	android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		android:textSize="15sp"
        	android:text="@string/rotary_horizontal"
        	/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@null" >

            <Button
                android:id="@+id/cancel"
                android:layout_width="78dp"
                android:layout_height="30dp"
				android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_rotary"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

    </RadioGroup>


</LinearLayout>