<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/operation_button_selectall"
        android:showAsAction="ifRoom"
        android:title="@string/operation_selectall"/>
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/operation_button_copy"
        android:showAsAction="ifRoom"
        android:title="@string/operation_copy"/>
    <item
        android:id="@+id/action_move"
        android:icon="@drawable/operation_button_move"
        android:showAsAction="ifRoom"
        android:title="@string/operation_move"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/operation_button_delete"
        android:showAsAction="ifRoom"
        android:title="@string/operation_delete"/>
    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/operation_button_cancel"
        android:showAsAction="ifRoom"
        android:title="@string/operation_cancel"/>

    <!--
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/operation_button_delete"
        android:showAsAction="ifRoom|withText"
        android:title="@string/operation_delete"/>
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/operation_button_copy"
        android:showAsAction="ifRoom|withText"
        android:title="@string/operation_copy"/>
    <item
        android:id="@+id/action_move"
        android:icon="@drawable/operation_button_move"
        android:showAsAction="ifRoom|withText"
        android:title="@string/operation_move"/>
    <item
        android:id="@+id/action_send"
        android:icon="@drawable/operation_button_send"
        android:showAsAction="ifRoom|withText"
        android:title="@string/operation_send"/>
    <item
        android:id="@+id/action_copy_path"
        android:icon="@drawable/operation_button_copypath"
        android:showAsAction="ifRoom|withText"
        android:title="@string/operation_copy_path"/>
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/operation_button_selectall"
        android:showAsAction="ifRoom|withText"
        android:title="@string/operation_selectall"/>
    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/operation_button_cancel"
        android:showAsAction="ifRoom|withText"
        android:title="@string/operation_cancel"/>
    -->

</menu>