<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/secondary_title_background"
        android:gravity="center_vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical" >

            <LinearLayout
                android:id="@+id/current_path_pane"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/path_pane_bg"
                android:gravity="center_vertical"
                android:maxWidth="300dip" >

                <LinearLayout
                    android:id="@+id/current_path_scroller"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_weight="1"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/current_path_view"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="start"
                        android:paddingLeft="10dip"
                        android:singleLine="true" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/path_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/arrow_down" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/path_pane_up_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginLeft="5dip"
            android:src="@drawable/path_up_level" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <ListView
            android:id="@+id/sdFile_listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fastScrollEnabled="true"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true" >
        </ListView>

        <LinearLayout
            android:id="@+id/sd_not_available_page"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25px"
                android:src="@drawable/sd_not_available" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enable_sd_card"
                android:textSize="22px" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/file_not_available_page"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25px"
                android:src="@drawable/file_not_available" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_file"
                android:textSize="22px" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/path_scrollView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dropdown"
            android:overScrollMode="never"
            android:visibility="gone" >

            <LinearLayout
                android:id="@+id/path_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:orientation="vertical" >
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/moving_operation_bar"
        style="@style/BottomButtonBar"
        android:visibility="gone" >

        <Button
            android:id="@+id/button_moving_confirm"
            style="@style/BottomButton.Left"
            android:text="@string/operation_paste" />

        <Button
            android:id="@+id/button_moving_cancel"
            style="@style/BottomButton.Right"
            android:text="@string/operation_cancel" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/choosepath"
        style="@style/BottomButtonBar"
        android:visibility="gone" >

        <Button
            android:id="@+id/button_choose_confirm"
            style="@style/BottomButton.Left"
            android:text="@string/ok" />

        <Button
            android:id="@+id/button_choose_cancel"
            style="@style/BottomButton.Right"
            android:text="@string/operation_cancel" />
    </LinearLayout>

</LinearLayout>